# dfjimu

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  run_demo.py  setup.py
.github/workflows/: publish.yml  test.yml
data/: data_1D_01.mat  data_1D_02.mat  data_1D_03.mat  data_1D_04.mat  data_1D_05.mat  data_2D_01.mat  data_2D_02.mat  data_2D_03.mat  data_2D_05.mat  data_2D_07.mat  data_3D_01.mat  data_3D_02.mat  data_3D_03.mat  data_3D_04.mat  data_3D_05.mat
examples/: demo.ipynb
matlab_implementation/: run.m
matlab_implementation/MEKF/: MEKF_conn.m
matlab_implementation/OPT/: OPT_conn.m  update_linPoints.m
matlab_implementation/OPT/costf/: costAcc.m  costInit.m  costJointPosition.m  costLnk.m  costMotion.m
matlab_implementation/OPT/derivatives/: dAcc.m  dInit.m  dLnk.m  dLnkdr.m  dMotion.m  dMotiontm1.m
matlab_implementation/OPT/jacobian/: calcJac.m  calcJac2.m  calcJacR.m  calcJac_Link.m
matlab_implementation/lib/: EXPq.m  EXPr.m  LOGq.m  allignData.m  allignDataE.m  angDist.m  approxDerivative.m  calcAccatCenter.m  calcRelw.m  calcX.m  calculateK.m  calculateKRange.m  crossM.m  importMTBFile.m  initialOrientation.m  initialOrientationW.m  integrateGyr.m  loadViconData.m  putZerosIn.m  quat2matrix.m  quatL.m  quatR.m  readme.txt  removeBias.m  rotV.m
matlab_implementation/lib/approxs/: dexpnCdexpn.m  dexpndn.m  dlogdq.m
src/dfjimu/: __init__.py  lever_arms.py  map_acc.py  map_acc_stable.py  mekf_acc.py
src/dfjimu/_cython/: core.pyx  lever_arms.pyx  optimizer.pyx
src/dfjimu/_python/: __init__.py  core.py  lever_arms.py  optimizer.py
src/dfjimu/utils/: common.py
tests/: compare_with_matlab.py  evaluate_package.py  test_log_q_stability.py  test_smoke.py
tests/matlab_export/: export_reference.m  wrap_mekf.m  wrap_opt.m
