[build-system]
requires = ["setuptools>=61.0", "cython>=3.0", "numpy"]
build-backend = "setuptools.build_meta"

[project]
name = "dfjimu"
version = "0.2.0"
description = "Drift-free IMU-based joint kinematics estimation (Weygers & Kok, 2020)"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{name = "Daniel Oliver Martin Weber"}]
keywords = ["IMU", "joint-kinematics", "MEKF", "quaternion", "inertial-sensors"]
dependencies = [
    "numpy",
    "scipy",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Cython",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
]

[project.urls]
Homepage = "https://github.com/daniel-om-weber/dfjimu"
Repository = "https://github.com/daniel-om-weber/dfjimu"
Issues = "https://github.com/daniel-om-weber/dfjimu/issues"

[project.optional-dependencies]
examples = [
    "jupyter",
    "matplotlib",
]
dev = [
    "cython>=3.0",
    "setuptools",
    "pytest",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
dfjimu = ["*.pyx", "*.pxd", "py.typed"]
